force-app/main/default/objects/Opportunity_Service_Provider_Invoice__c/Opportunity_Service_Provider_Invoice__c.object-meta.xml
<CustomObject>
    <description>Invoice information received from Opportunity Service Providers</description>
    <label>Opportunity Service Provider Invoice</label>
    <nameField>
        <displayFormat>spi-{00000}</displayFormat>
        <label>Service Provider Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Service Provider Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>