force-app/main/default/objects/Opportunity_Service_Provider_Invoice__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <formula>Scheduled_Payment__r.Amount__c</formula>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>