force-app/main/default/objects/Opportunity_Service_Provider_Invoice__c/fields/Opportunity_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Service_Provider__c</fullName>
    <label>Opportunity Service Provider</label>
    <referenceTo>Opportunity_Service_Provider__c</referenceTo>
    <relationshipLabel>Opportunity Service Provider Invoices</relationshipLabel>
    <relationshipName>Opportunity_Service_Provider_Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>