force-app/main/default/objects/Opportunity_Service_Provider_Invoice__c/fields/Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Date__c</fullName>
    <formula>Scheduled_Payment__r.Sent_to_Bank_Date__c</formula>
    <label>Paid Date</label>
    <type>Date</type>
</CustomField>