force-app/main/default/objects/Opportunity_Service_Provider_Invoice__c/fields/Payment_Amount_Available__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount_Available__c</fullName>
    <description>The lesser of Available Balance for Service Provider and Payment Requested. (Considers Scheduled Payments as well)</description>
    <formula>IF(
				Payment_Requested__c &lt; (Opportunity_Service_Provider__r.Allowance_Available__c*Opportunity_Service_Provider__r.Payment_Factor__c + Scheduled_Payment__r.Amount__c),
				Payment_Requested__c,
				Opportunity_Service_Provider__r.Allowance_Available__c*Opportunity_Service_Provider__r.Payment_Factor__c + Scheduled_Payment__r.Amount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Amount Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>