force-app/main/default/objects/Opportunity_Service_Provider_Invoice__c/fields/Payment_Requested__c.field-meta.xml
<CustomField>
    <fullName>Payment_Requested__c</fullName>
    <formula>Amount__c * Opportunity_Service_Provider__r.Payment_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Amount Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>