force-app/main/default/objects/Opportunity_Service_Provider_Invoice__c/fields/Provider_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Provider_Invoice_Number__c</fullName>
    <label>Provider Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>