force-app/main/default/objects/Opportunity_Service_Provider_Invoice__c/fields/Scheduled_Payment__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduled Payment</label>
    <referenceTo>Scheduled_Payment__c</referenceTo>
    <relationshipLabel>Opportunity Service Provider Invoices</relationshipLabel>
    <relationshipName>Opportunity_Service_Provider_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>