force-app/main/default/objects/Opportunity_Service_Provider_Invoice__c/fields/Service_Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Id__c</fullName>
    <formula>Opportunity_Service_Provider__r.Service_Provider_Facility__c</formula>
    <label>Service Provider Id</label>
    <type>Text</type>
</CustomField>