force-app/main/default/objects/Opportunity_Service_Provider_Invoice__c/fields/Service_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Name__c</fullName>
    <formula>Opportunity_Service_Provider__r.Service_Provider_Facility__r.Name</formula>
    <label>Service Provider Name</label>
    <type>Text</type>
</CustomField>