force-app/main/default/objects/Opportunity_Service_Provider_Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
    NOT(ISBLANK(TEXT(Scheduled_Payment__r.Status__c))),
    TEXT(Scheduled_Payment__r.Status__c),
    &#39;Ready to Schedule&#39;
)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>